# pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "udaan"
version = "0.1.0"
description = "Quadrotor dynamics and control for cable-suspended payload systems"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Prasanth Kotaru" }
]
keywords = [
    "robotics",
    "quadrotor",
    "control",
    "mujoco",
    "simulation",
    "geometric-control",
    "SE3",
    "SO3",
    "cable-suspended-payload",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
mujoco = [
    "mujoco>=3.0",
    "mujoco-python-viewer>=0.1",
]
bullet = [
    "pybullet>=3.2",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-benchmark>=4.0",
    "hypothesis>=6.82",
    "mypy>=1.5",
    "ruff>=0.1",
    "pre-commit>=3.4",
]
docs = [
    "sphinx>=7.2",
    "sphinx-autodoc-typehints>=1.24",
    "sphinx-rtd-theme>=1.3",
    "myst-parser>=2.0",
]
rl = [
    "gymnasium>=0.29",
    "stable-baselines3>=2.0",
]
all = ["udaan[mujoco,bullet,dev,docs,rl]"]

[project.urls]
Homepage = "https://github.com/vkotaru/udaan"
Documentation = "https://udaan.readthedocs.io"
Repository = "https://github.com/vkotaru/udaan"
Issues = "https://github.com/vkotaru/udaan/issues"

# ============================================================================
# Build configuration (using current layout, not src/)
# ============================================================================
[tool.hatch.build.targets.wheel]
packages = ["udaan"]

[tool.hatch.build.targets.sdist]
include = [
    "/udaan",
    "/tests",
    "/README.md",
    "/LICENSE",
]

# ============================================================================
# Ruff - Fast Python linter and formatter
# ============================================================================
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "PTH",  # flake8-use-pathlib
    "NPY",  # numpy-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "ARG001", # unused function argument (common in callbacks)
    "ARG002", # unused method argument
]

[tool.ruff.lint.isort]
known-first-party = ["udaan"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ============================================================================
# Mypy - Static type checker
# ============================================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
# Start lenient, tighten over time
strict = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "mujoco.*",
    "scipy.*",
    "control.*",
    "pybullet.*",
    "vpython.*",
    "matplotlib.*",
]
ignore_missing_imports = true

# ============================================================================
# Pytest - Testing framework
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "mujoco: requires mujoco installation",
    "bullet: requires pybullet installation",
    "benchmark: performance benchmarks",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ============================================================================
# Coverage - Code coverage measurement
# ============================================================================
[tool.coverage.run]
source = ["udaan"]
branch = true
omit = [
    "udaan/utils/vfx/*",  # Visualization code
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
    "def __repr__",
]
show_missing = true
