# pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "udaan"
version = "1.3.0"
description = "Quadrotor dynamics and control for cable-suspended payload systems"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"
authors = [
    { name = "Prasanth Kotaru" }
]
keywords = [
    "robotics",
    "quadrotor",
    "control",
    "mujoco",
    "simulation",
    "geometric-control",
    "SE3",
    "SO3",
    "cable-suspended-payload",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "mujoco>=3.0",
    "typer>=0.9",
    "vpython>=7.6",
    "imageio>=2.30",
    "imageio-ffmpeg>=0.4",
]

[project.optional-dependencies]
mujoco = [
    "mujoco>=3.0",
]
l1 = [
    "control>=0.9",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-benchmark>=4.0",
    "hypothesis>=6.82",
    "mypy>=1.5",
    "ruff>=0.1",
    "pre-commit>=3.4",
]
docs = [
    "sphinx>=7.2",
    "sphinx-autodoc-typehints>=1.24",
    "furo>=2024.1.29",
    "myst-parser>=2.0",
]
rl = [
    "gymnasium>=0.29",
    "stable-baselines3>=2.0",
]
plot = [
    "bokeh>=3.0",
]
all = ["udaan[mujoco,l1,dev,docs,rl,plot]"]

[project.scripts]
udaan = "udaan.cli:app"

[project.urls]
Homepage = "https://github.com/vkotaru/udaan"
Documentation = "https://udaan.readthedocs.io"
Repository = "https://github.com/vkotaru/udaan"
Issues = "https://github.com/vkotaru/udaan/issues"

# ============================================================================
# Build configuration (using current layout, not src/)
# ============================================================================
[tool.hatch.build.targets.wheel]
packages = ["udaan"]

[tool.hatch.build.targets.sdist]
include = [
    "/udaan",
    "/tests",
    "/README.md",
    "/LICENSE",
]

# ============================================================================
# Ruff - Fast Python linter and formatter
# ============================================================================
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "PTH",  # flake8-use-pathlib
    "NPY",  # numpy-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E721",   # type comparison (use isinstance)
    "E731",   # lambda assignment
    "ARG001", # unused function argument (common in callbacks)
    "ARG002", # unused method argument
    "ARG004", # unused static method argument
    "ARG005", # unused lambda argument
    "B006",   # mutable list/dict default argument
    "B008",   # mutable default argument (common in legacy code)
    "B028",   # no stacklevel in warnings
    "E741",   # ambiguous variable name (l, O, I)
    "F403",   # star imports
    "F405",   # names from star imports
    "F821",   # undefined name (from star imports)
    "F841",   # unused variable (will clean up incrementally)
    "SIM102", # collapsible if
    "SIM118", # use key in dict
    "SIM401", # dict.get instead of if-else
    "UP031",  # printf format (will clean up incrementally)
    "TCH001", # missing type hints
]

[tool.ruff.lint.per-file-ignores]
# Main init has path setup before imports
"udaan/__init__.py" = ["E402", "PTH100", "PTH120"]
# Scripts may use lambdas
"scripts/*" = ["E731"]
# Legacy visualization code uses vpython star imports
"udaan/utils/vfx/*" = ["F403", "F405", "B008", "F821"]
# Legacy model code has many issues to fix incrementally
"udaan/models/*" = ["E402", "PTH100", "PTH110", "PTH118", "PTH120", "PTH123"]
# Asset creation uses mutable defaults
"udaan/utils/assets/*" = ["B006", "PTH123"]

[tool.ruff.lint.isort]
known-first-party = ["udaan"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ============================================================================
# Mypy - Static type checker
# ============================================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
# Start lenient, tighten over time
strict = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "mujoco.*",
    "scipy.*",
    "control.*",
    "pybullet.*",
    "vpython.*",
    "matplotlib.*",
]
ignore_missing_imports = true

# ============================================================================
# Pytest - Testing framework
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "mujoco: requires mujoco installation",
    "bullet: requires pybullet installation",
    "benchmark: performance benchmarks",
    "integration: integration tests (simulate full trajectories)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ============================================================================
# Coverage - Code coverage measurement
# ============================================================================
[tool.coverage.run]
source = ["udaan"]
branch = true
omit = [
    "udaan/utils/vfx/*",  # Visualization code
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
    "def __repr__",
]
show_missing = true
